After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 322886 - gtk-engines-2.6.6 Win32 link error
gtk-engines-2.6.6 Win32 link error
Status: RESOLVED FIXED
Product: gtk-engines
Classification: Deprecated
Component: crux
2.6.x
Other Cygwin
: Normal critical
: ---
Assigned To: gtk-engines maintainers
gtk-engines maintainers
: 323554 (view as bug list)
Depends on:
Blocks: 321140
 
 
Reported: 2005-11-30 22:08 UTC by Yaakov Selkowitz
Modified: 2005-12-08 16:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Yaakov Selkowitz 2005-11-30 22:08:07 UTC
Version details: 2.6.6

While building gtk-engines-2.6.6 on Cygwin, I got the following error:

.libs/crux-main.o:crux-main.c:(.text+0x35): undefined reference to
`_uninstall_all_focus_hooks'

It would appear that the following patch, previously applied to HEAD, needs to
also be applied to the gtk-engines-2-6 branch:

http://cvs.gnome.org/viewcvs/gtk-engines/engines/crux/src/crux-main.c?r1=1.1&r2=1.2&makepatch=1&diff_format=h

This will affect MinGW as well.
Comment 1 Thomas Wood 2005-11-30 23:39:20 UTC
Not sure how this one managed to slip through the net (I had -Wall and -pedantic
gcc options on when I was testing), but thanks for pointing it out. I have fixed
it in CVS.
Comment 2 Yaakov Selkowitz 2005-11-30 23:41:30 UTC
This isn't a compile warning, it's a link error; on Cygwin/MinGW, shared
libraries and modules must have all symbols resolved at link time.  I presume
you're using Linux, where this isn't the case, hence you didn't see it.
Comment 3 Thomas Wood 2005-11-30 23:55:34 UTC
Good point. Thanks for the clarification.
Comment 4 Thomas Wood 2005-12-08 16:41:07 UTC
*** Bug 323554 has been marked as a duplicate of this bug. ***