Fix the crux engine theme crash looks like this:

[...]libcrux-engine.so: Undefined symbol "uninstall_all_focus_hooks"

Reported by:	TooManySecrets <toomany@toomany.net>,
		Robert C. Noland III <rnoland@2hip.net>
GNOME Bugzilla:	http://bugzilla.gnome.org/show_bug.cgi?id=322886
Obtained from:	GNOME CVS (gtk-engines module)